# ai-based-tutor

./: .gitignore  .pre-commit-config.yaml  .pylintrc  AGENT_V2_RESULTS.md  AGENT_VERIFICATION.md  BUG_REPORT.md  PLAN_TOOL_AGENTS.md  README.md  render.yaml  ruff.toml
.github/workflows/: a2a-checks.yml  lint.yml
backend/: .env.example  .env.sample  .gitignore  .pylintrc  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
backend/.well-known/: agent-card.json
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  guardrails.py  logging_config.py  main.py  otel.py  resilience.py  tracing.py  websocket.py
backend/app/agents/: __init__.py  chat_orchestrator.py  course_planner.py  curriculum_agent.py  doubt_agent.py  interview_scorer.py  json_utils.py  orchestrator.py  planner_agent.py  progress_agent.py  prompt_utils.py  quiz_agent.py  routing.py  skill_gap_agent.py  state.py  steps.py  streaming.py  supervisor.py  tools.py
backend/app/agents/workflow/: __init__.py  base.py  planner.py  registry.py
backend/app/agents/workflow/workflows/: __init__.py  course_gen.py  interview_review.py  job_analysis.py  quiz_gen.py
backend/app/agents_v2/: __init__.py  assistant_agent.py  base.py  curriculum_agent.py  doubt_agent.py  progress_agent.py  quiz_agent.py  router.py
backend/app/agents_v3/: __init__.py  deep_agent.py  graph.py  schemas.py
backend/app/agents_v3/middleware/: __init__.py  base.py  cot.py  guardrail.py  observability.py
backend/app/agents_v3/subagents/: __init__.py  assistant.py  base.py  curriculum.py  doubt.py  progress.py  quiz.py
backend/app/auth/: __init__.py  jwt.py
backend/app/db/: __init__.py  mongo.py  mongo_sync.py
backend/app/evals/: __init__.py  deepeval_judge.py  deepeval_metrics.py  evaluator.py  llm_judge.py  mongo.py  schemas.py
backend/app/hf/: __init__.py  client.py  content_generator.py  difficulty_scorer.py  doubt_solver.py  embeddings.py  flashcard_generator.py  generation_client.py  image_captioner.py  models.py  quiz_generator.py  quiz_questions.py  recommendation_agent.py  sentiment.py  spaced_repetition.py  speech_to_text.py  topic_classifier.py  trend_discovery.py  utils.py
backend/app/middleware/: __init__.py  activity_logger.py
backend/app/models/: __init__.py  activity_log.py  content.py  curriculum.py  doubts.py  learner.py  quiz.py  user.py
backend/app/prompts/: __init__.py  curriculum.yaml  doubt_solver.yaml  guardrails.yaml  loader.py  quiz_generator.yaml
backend/app/routers/: __init__.py  admin.py  assistant.py  auth.py  chat.py  content.py  courses.py  curriculum.py  doubts.py  evals.py  feed.py  hf.py  jobs.py  leaderboard.py  learner.py  profile.py  progress.py  quiz.py  session.py
backend/app/routers/v2/: __init__.py  chat.py
backend/app/routers/v3/: __init__.py  chat.py
backend/app/schemas/: __init__.py  agents.py  auth.py  doubts.py  jobs.py  learner.py  quiz.py
backend/app/services/: __init__.py  activity_log_service.py  code_runner.py
backend/app/tasks/: celery_app.py  task_definitions.py
backend/app/tools/: __init__.py  registry.py  schemas.py
backend/app/tools/implementations/: __init__.py  db_tools.py  hf_tools.py  logic_tools.py  search_tools.py
backend/scripts/: api_test_report.py  piston_install.sh  smoke_v3.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_code_runner.py  test_cross_agent.py  test_deepeval_judge.py  test_e2e.py  test_evals.py  test_hf.py  test_integration.py  test_jobs.py  test_steps.py  test_v2_concurrency.py  test_v2_stress.py  test_workflow.py
backend/tests/evals/: datasets.py  test_quality.py
e2e/: api_coverage.py  full.py  smoke.py
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/hooks/: useAgentSocket.ts  useAgentTimeline.ts  useHFInference.ts  useSpeechInput.ts
frontend/src/lib/: agentNames.ts  api.ts  hf.ts  socket.ts
frontend/src/pages/: AdminPage.tsx  AssistantPage.tsx  AtelierV2Page.tsx  (+17 more)
(+32 files in other folders)
