[project]
name = "ai-tutor"
version = "1.0.0"
description = "Multi-agent AI tutoring platform with LangGraph + Hugging Face"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pymongo",
    "redis",
    "celery",
    "flower",
    "langgraph",
    "langchain",
    "langchain-core",
    "ddgs",
    "huggingface-hub>=0.29.0",
    "openai",
    "python-jose[cryptography]",
    "bcrypt",
    "python-multipart",
    "structlog",
    "tenacity",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "python-socketio",
    "httpx",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "numpy",
    "langfuse",
    "pyyaml",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
