[project]
name = "ai-tutor"
version = "1.0.0"
description = "Multi-agent AI tutoring platform with LangGraph + Hugging Face"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "pymongo",
    "redis",
    "celery",
    "flower",
    "langgraph>=1.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "ddgs",
    "huggingface-hub>=1.20",
    "openai>=2.43",
    "python-jose[cryptography]>=3.5",
    "bcrypt",
    "python-multipart>=0.0.32",
    "structlog>=26.1",
    "tenacity>=9.1",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "python-socketio",
    "httpx>=0.28",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "numpy",
    "langfuse>=4.9",
    "pyyaml",
    "cachetools>=5.3",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
