[project]
name = "ai-tutor"
version = "1.0.0"
description = "Multi-agent AI tutoring platform with LangGraph + Hugging Face"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.138",
    "uvicorn[standard]>=0.49",
    "pymongo",
    "redis",
    "celery",
    "flower",
    "langgraph>=1.2",
    "langchain>=0.3",
    "langchain-core>=0.3",
    "ddgs",
    "huggingface-hub>=1.20",
    "openai>=2.43",
    "python-jose[cryptography]>=3.5",
    "bcrypt",
    "python-multipart>=0.0.32",
    "structlog>=26.1",
    "tenacity>=9.1",
    "opentelemetry-sdk",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation-fastapi",
    "python-socketio",
    "httpx>=0.28",
    "pydantic[email]",
    "pydantic-settings",
    "python-dotenv",
    "numpy",
    "langfuse>=4.9",
    "pyyaml",
    "cachetools>=5.3",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
]

# NOTE: the opt-in DeepEval quality suite (deepeval + instructor) is intentionally NOT a project
# dependency. Its transitive pins conflict with this project's tenacity>=9.1 and huggingface-hub>=1.20
# (deepeval needs tenacity<=9.0 and click<8.4, hf-hub needs click>=8.4), which would make `uv sync`
# unresolvable. The eval suite is marker-gated and skipped unless those packages are present, so:
#   to run evals:  uv pip install "deepeval>=4" "instructor>=1.6"  then  RUN_EVALS=1 uv run pytest -m evals
# This keeps `uv sync` / `uv lock` working for the core project.

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "evals: DeepEval-based quality suite (opt-in; hits the NVIDIA judge LLM). Run with -m evals.",
]

[tool.ruff.lint.per-file-ignores]
# These call pytest.importorskip("deepeval") before importing deepeval, which trips E402.
"tests/test_deepeval_judge.py" = ["E402"]
"tests/evals/*.py" = ["E402"]
